--- a/index.html
+++ b/index.html
@@ -55,5 +55,6 @@
 
   <a href="https://www.amazon.com/stores/GECKO/page/B19A4555-1724-4E6C-B90F-2B96E1DDC2B6?lp_asin=B088K2GY55&ref_=ast_bln&store_ref=bl_ast_dp_brandLogo_sto" class="button" target="_blank">Shop on Gecko Amazon </a>
   <a href="https://www.amazon.com/stores/PARDUS/page/DBA29117-2531-48B2-9BD2-BF32879E7161?is_byline_deeplink=true&deeplink=DBA29117-2531-48B2-9BD2-BF32879E7161&redirect_store_id=DBA29117-2531-48B2-9BD2-BF32879E7161&lp_asin=B0D3TM8MFL&ref_=ast_bln&store_ref=bl_ast_dp_brandLogo_sto" class="button" target="_blank">Shop on PARDUS Amazon</a>
+  <a href="https://www.youtube.com/@geckocajonkalimba1289" class="button" target="_blank">Youtube</a>
 </body>
 </html>
