--- a/more-links.html
+++ b/more-links.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>More Links</title>
+  <title>Amazon Deals</title>
   <style>
     body {
       margin: 0;
@@ -42,7 +42,7 @@
 <body>
   <h1>More Links</h1>
 
-  <a href="https://www.amazon.com/promocode/AI2LWG4S71AAT" class="button" target="_blank">CM65Z 15%OFF</a>
+  <a href="https://amzn.to/4mwWbQ8" class="button" target="_blank">CM65Z 15%OFF</a>
   <a href="https://www.youtube.com/" class="button" target="_blank">YouTube</a>
   <a href="https://www.instagram.com/" class="button" target="_blank">Instagram</a>
   <a href="index.html" class="button">⬅ Back to Home</a>
