--- a/more-links.html
+++ b/more-links.html
@@ -8,7 +8,7 @@
     body {
       margin: 0;
       font-family: "Segoe UI", sans-serif;
-      background: url("your-background.jpg") no-repeat center center fixed;
+      background: url("more-links-background.jpg") no-repeat center center fixed;
       background-size: cover;
       color: #333;
       display: flex;
