--- a/more-links.html
+++ b/more-links.html
@@ -53,12 +53,12 @@
   <h1>Amazon Deals</h1>
 
   <a href="https://amzn.to/42DOAbm" class="button" target="_blank">
-    <img src="product1.jpg" alt="Amazon Icon">
+    <img src="CM65Z.jpg" alt="Amazon Icon">
     CM65Z 15%OFF
   </a>
 
   <a href="https://www.youtube.com/" class="button" target="_blank">
-    <img src="product2.jpg" alt="YouTube Icon">
+    <img src="CM65Z.jpg" alt="YouTube Icon">
     YouTube
   </a>
 
