--- a/more-links.html
+++ b/more-links.html
@@ -8,7 +8,7 @@
     body {
       margin: 0;
       font-family: "Segoe UI", sans-serif;
-      background: url("more-links-background.png") no-repeat center center fixed;
+      background: url("more-links-background.jpg") no-repeat center center fixed;
       background-size: cover;
       color: #333;
       display: flex;
@@ -53,7 +53,7 @@
   <h1>Amazon Deals</h1>
 
   <a href="https://amzn.to/42DOAbm" class="button" target="_blank">
-    <img src="CM65Z.jpg" alt="Amazon Icon">
+    <img src="CM65Z.jpg" alt="CM65Z">
     CM65Z 15%OFF
   </a>
 
