--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
   </style>
 </head>
 <body>
-  <img src="GECKO-logo.jpeg" alt="GECKO Logo" class="logo" />
+  <img src="GECKOlogo.jpg" alt="GECKO Logo" class="logo" />
   <h1>Welcome to GECKO & PARDUS</h1>
   <p>GECKO, founded in 2009 in Huizhou, specializes in high-quality cajón drums, ukuleles, and guitars. PARDUS is our sub-brand dedicated to premium percussion. Here are our Amazon stores:</p>
 
